* fixed compilation issue on systems without GTK (reported by Jeroen Roovers/Gentoo)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,13 @@
 Written by:
-    Petr Koloros      <silk(at)sinus(dot)cz>
+    Petr Koloros      <silkATseznam.cz>
 
 ARP code by:
-    Tomasz Chilinski  <chilek(at)chilan(dot)com>
-    Rafal Czyzewski   <raphag(at)chilan(dot)com>
-    Ewa Martyniuk     <eveem(at)sav(dot)tkb(dot)net(dot)pl>
+    Tomasz Chilinski  <chilekATchilan.com>
+    Rafal Czyzewski   <raphagATchilan.com>
+    Ewa Martyniuk     <eveemATsav.tkb.net.pl>
 
 Translation:
-    Tomasz Chilinski  <chilek(at)chilan(dot)com>
+    Tomasz Chilinski  <chilekATchilan.com>
 
 
 Thanks to all who contributed by ideas.
