--- a/src/pinger.1
+++ b/src/pinger.1
@@ -22,6 +22,14 @@ You can use
 which is shortcut to
 .B pinger --gtk
 
+.TP
+\f3--gtk3\f1
+Use GTK 3.x mode (graphical). Requires pinger compiled with GTK3 support.
+You can use
+.B gtk3pinger
+which is shortcut to
+.B pinger --gtk3
+
 .P
 For more details about configuring pinger see README file included in pinger distribution package.
 .P
