--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 PINGER - GTK+/ncurses multi-ping utility
-Copyright (C) 2002-2014 Petr Koloros <silkATseznam.cz>
+Copyright (C) 2002-2014 Petr Koloros <silk[a t]seznam[dOt]cz>
 See AUTHORS for more.
 
 This program GPL'ed. See COPYING for more details.
