Allow to compile on system without GTK
Fix copyright and name.
Prepare for GitHub.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 PINGER - GTK+/ncurses multi-ping utility
-Copyright (C) 2002-2014 Petr Koloros <silk[a t]seznam[dOt]cz>
+Copyright (C) 2002-2017 Petr Koloros <[namesurname]@gmail.com>
 See AUTHORS for more.
 
 This program GPL'ed. See COPYING for more details.
