Prepare for GitHub

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,13 @@
 Written by:
-    Petr Koloros      <silkATseznam.cz>
+    Petr Koloros      petrkoloros/gmail.com
 
 ARP code by:
-    Tomasz Chilinski  <chilekATchilan.com>
-    Rafal Czyzewski   <raphagATchilan.com>
-    Ewa Martyniuk     <eveemATsav.tkb.net.pl>
+    Tomasz Chilinski  chilek/chilan.com
+    Rafal Czyzewski   raphag/chilan.com
+    Ewa Martyniuk     eveem/sav.tkb.net.pl
 
 Translation:
-    Tomasz Chilinski  <chilekATchilan.com>
+    Tomasz Chilinski  chilek/chilan.com
 
 
 Thanks to all who contributed by ideas.
